cost function is now calculated ones and stored in dict.

--- a/MC_ML_clustering.ipynb
+++ b/MC_ML_clustering.ipynb
@@ -305,6 +305,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5 µs, sys: 2 µs, total: 7 µs\n",
+      "Wall time: 13.1 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time\n",
+    "I1,I2 = 1,1\n",
+    "config_opt = {}\n",
+    "for i in [-1,1]:\n",
+    "    for j in [-1,1]:\n",
+    "        for k in [-1,1]:\n",
+    "            for l in [-1,1]:\n",
+    "                for n in [-1,1]:\n",
+    "                    cost = 2*n*((i+j)*I1 + (k+l)*I2)\n",
+    "                    config_opt[f'{i}{j}{k}{l}{n}'] = np.exp(-cost/10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialstate(N):\n",
+    "    state = 2*np.random.randint(2, size=(N,N))-1\n",
+    "    return state\n",
+    "\n",
+    "def mcmove2(config, beta):\n",
+    "    for i in range(N):\n",
+    "        for j in range(N):\n",
+    "                r=1\n",
+    "                a = np.random.randint(0, N)\n",
+    "                b = np.random.randint(0, N)\n",
+    "                s =  config[a, b]\n",
+    "                cost = config_opt[f'{config[(a+1)%N,b]}{config[(a-1)%N,b]}{config[a,(b+1)%N]}{config[a,(b-1)%N]}{s}']\n",
+    "                if rand() < cost:\n",
+    "                    r = -1\n",
+    "                s*=r\n",
+    "                config[a, b] = s\n",
+    "    return config\n",
+    "\n",
+    "def mcmove(config, beta):\n",
+    "    for i in range(N):\n",
+    "        for j in range(N):\n",
+    "                r=1\n",
+    "                a = np.random.randint(0, N)\n",
+    "                b = np.random.randint(0, N)\n",
+    "                s =  config[a, b]\n",
+    "                nb = config[(a+1)%N,b]*0.6 + config[(a-1)%N,b]*0.6 + config[a,(b+1)%N] + config[a,(b-1)%N]\n",
+    "                cost = 2*s*nb\n",
+    "                if cost < 0:\n",
+    "                    r = -1\n",
+    "                elif rand() < np.exp(-cost*beta):\n",
+    "                    r = -1\n",
+    "                s*=r\n",
+    "                config[a, b] = s\n",
+    "    return config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "256.44451117515564"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st = time.time()\n",
+    "N=500\n",
+    "temp = 100\n",
+    "config = initialstate(N)\n",
+    "for i in range(50):\n",
+    "    mcmove(config, 2)\n",
+    "time.time()-st"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "124.92748594284058"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st = time.time()\n",
+    "config = initialstate(N)\n",
+    "for i in range(50):\n",
+    "    mcmove2(config, 2)\n",
+    "time.time()-st"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
